--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "convex": "^1.12.1",
     "lucide-react": "^0.390.0",
     "next": "14.2.3",
+    "openai": "^4.52.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
